@@ -1,3 +1,8 @@
+2011-10-19  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-connectable-p): Make a stronger check on a
+	running process.
+
 2011-10-18  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-file-name-handler): Load Tramp packages silently.
